# story-chatbot

./: README.md
backend/: .env  .gitignore  README.md  design.puml  pyproject.toml
backend/app/: main.py
backend/app/ai/: chain.py  retriever.py
backend/app/ai/core/: base_llm.py  config.py  factory.py  gemini.py
backend/app/ai/embeddings/: base.py  gemini.py  openai.py
backend/app/ai/factory/: embedding_factory.py  llm_factory.py
backend/app/ai/llm/: base.py  gemini.py  openai.py
backend/app/ai/prompts/: chat_prompt.py
backend/app/ai/rag/: chain.py  memory.py
backend/app/ai/services/: chat.py
backend/app/api/: chat.py
backend/app/core/: config.py
backend/app/data/: loader.py  vectorstore.py
backend/app/database/: loader.py  memory.py  vectorstore.py
backend/app/routers/: chat.py
backend/app/schemas/: chat.py
backend/chroma_db/: chroma.sqlite3
backend/data/: vo-luyen-dinh-phong_chapters.json
frontend/: README.md  env.d.ts  index.html  package-lock.json  package.json
frontend/e2e/: vue.spec.ts
frontend/src/: main.ts
frontend/src/api/: chat.ts
frontend/src/assets/: main.css
frontend/src/components/: ChatUI.vue
frontend/src/components/__tests__/: ChatUI.spec.ts
frontend/src/directives/: v-focus-slash.ts
frontend/src/router/: index.ts
frontend/src/views/: HomeView.vue
